Make test work